--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,5 +3,11 @@ theme:
   name: material
 nav:
   - Introduction: index.md
-  - Ex 1 - Pods: pod.md
-  - Ex 2 - Deplyments: deployment.md
+  - Exercise 1 - Pods: pod.md
+  - Exercise 2 - Deplyments: deployment.md
+markdown_extensions:
+  - admonition
+  - codehilite
+  - footnotes
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
