--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,15 @@
 site_name: Powercoders - Introduction to Cloud Computing
 theme:
   name: material
+  palette:
+    primary: black
+    accent: indigo
+  favicon: img/favicon-32x32.png
+  logo: img/cloud3.png
 nav:
   - Introduction: index.md
   - Exercise 1 - Pods: pod.md
-  - Exercise 2 - Deplyments: deployment.md
+  - Exercise 2 - Deplyoments: deployment.md
 markdown_extensions:
   - admonition
   - codehilite
@@ -14,3 +19,4 @@ markdown_extensions:
   - pymdownx.tabbed
   - toc:
       toc_depth: 2
+      permalink: true
