--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,8 @@ nav:
   - Introduction: index.md
   - Exercise 1 - Pods: pod.md
   - Exercise 2 - Deplyoments: deployment.md
-  - Exercise 3 - Networking: deployment.md
-  - Exercise 4 - ConfigMaps: deployment.md
+  - Exercise 3 - Networking: networking.md
+  - Exercise 4 - ConfigMaps: configmap.md
   - Appendix:
     - vi Editor: vieditor.md
 markdown_extensions:
