--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,9 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.mark
   - pymdownx.tilde
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - toc:
       toc_depth: 2
       permalink: true
