--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ theme:
   logo: img/cloud3.png
 nav:
   - Introduction: index.md
+  - Exercise 0 - Projects: project.md
   - Exercise 1 - Pods: pod.md
   - Exercise 2 - Deplyoments: deployment.md
   - Exercise 3 - Networking: networking.md
