--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,8 @@ theme:
     accent: indigo
   favicon: img/favicon-32x32.png
   logo: img/cloud3.png
+  features:
+    - content.tabs.link
 
 edit_uri: ""
 
@@ -37,7 +39,8 @@ markdown_extensions:
   - pymdownx.smartsymbols
   - pymdownx.details
   - pymdownx.superfences
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true 
   - pymdownx.critic
   - pymdownx.caret
   - pymdownx.mark
